# dadam_multiagent

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
.github/workflows/: ci.yml
agents/: __init__.py  layout_engine.py  orchestrator.py  prompts.py
agents/blender/: __init__.py  camera.py  materials.py  renderer.py  scene_builder.py
agents/data/: pricing_data.py
agents/operations/: __init__.py  orchestrator.py  prompts.py
agents/tools/: __init__.py  calibration_tools.py  compositor_tools.py  drawing_tools.py  feedback_tools.py  image_tools.py  layout_tools.py  measurement_tools.py  operations_tools.py  pricing_tools.py  supabase_tools.py  vision_tools.py
api/: main.py
api/middleware/: auth.py  error_handler.py  logging_mw.py  rate_limit.py  security_headers.py
api/routes/: accounting.py  admin.py  enterprise.py  exports.py  feedback.py  orders.py  payments.py  projects.py  references.py
api/schemas/: common.py
db/: style_references.sql
db/migrations/: 001_foundation.sql  002_storage.sql  003_feedback_loop.sql  (+4 more)
scripts/: auto-save.sh  save-now.sh
shared/: config.py  constants.py  supabase_client.py
static/: account.html  admin-references.html  admin.html  auth-callback.html  enterprise.html  forgot-password.html  index.html  login.html  new.html  orders.html  pricing.html  project.html  projects.html  signup.html
tests/: test_blender.py  test_image_quality.py  test_inpaint_e2e.py  test_pipeline_e2e.py  test_real_images_e2e.py
workers/: __init__.py  feedback_cron.py
(+14 files in other folders)
